<resources>
    <string name="app_name">1G1_madP</string>

    <string name="new_game">New Game</string>
    <string name="story_behind">Story Behind</string>
    <string name="about_us">About Us</string>

    <string name="title_activity_fullscreen">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_story_behind">Story Behind</string>
    <string name="about_us_content">
        <!-- :) -->
        This game was a group project created for
        the HKU SPACE Mobile Application Development course during 2017-2018 Semester 2,
        by the following members of CL-01 Group 1:
        \nCHEUNG Pui Kin, Bacon (20026225)
        \nHO Po Sum, Sum (20028157)
        \nLAM Wai Hin, Jeanie (20031815)
        \nLI Kwan To, Tommy (20027290)
        \nNG Hoi Wa, Paul (20025578)
        \nWONG Kam Yi, Janice (20030531)
    </string>

    <string name="storybehind">
        Primary, Secondary school life and associate degree is familiar to many Hongkongers.
        Many parents in Hong Kong emphasize the importance of
        entering a university as the only way to success in the future.
        In order to get a ticket in entering universities,
        you need to get a good score in your primary school life and HKDSE, or a high CGPA in associate degree.
        This series of Life Simulator is to provide you the experience of the study journey in Hong Kong.
        To get into a university, you need to shoot different words and maths symbols in order to finish your
        homework and midterm.
        When you can get a high mark in your homework, your HKDSE and your associate degree,
        you can own the bright future and enjoy your university life!
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="primary_stage_name">Springfield Primary</string>
    <string name="dse_stage_name">DSE Examination</string>
    <string name="asso_stage_name">HKUSPACE CC</string>

    <string name="primary_text_chi">鵝鵝鵝曲項向天歌白毛浮綠水紅掌砵清波</string>
    <string name="primary_text_eng">Appleisredandorangeisblue</string>
    <string name="primary_text_maths">27345817231920</string>

    <string name="dse_text_chi">我欲因之夢吳越一夜飛度鏡湖月湖月照我影送我至剡溪</string>
    <string name="dse_text_eng">Vanityandpridearedifferentthings</string>
    <string name="dse_text_maths">8975981723</string>

    <string name="asso_text_chi">高級中國語文</string>
    <string name="asso_text_eng">EnglishForScienceAndTechnology</string>
    <string name="asso_text_maths">(()->{i**=9});</string>

    <string name="time_remain">Time remaining:%n%ds</string>
    <string name="asso_time_remain">%nMAD project due in:%n%ds</string>


    <string name="stage_again">Try Again</string>
    <string name="stage_new">Start!</string>
    <string name="stage_next">Next Stage</string>
    <string name="stage_score">Score: %d</string>
    <string name="money_now">Score: %d</string>
    <string name="register_title">Register!</string>
    <string name="your_name">Your Name</string>
    <string name="add_photo">Add Photo</string>
    <string name="start_game">Start Game!</string>
    <string name="restart_game">Restart Game</string>
    <string name="text_chinese">之乎者也</string>
    <string name="text_english">AbCXyZ</string>
    <string name="text_math">1+1–1*1</string>
    <string name="shop_money">$ %d</string>
    <string name="shop_tower">Invite Groupmate</string>
    <string name="shop_rate">Upgrade Typing Speed</string>
    <string name="shop_size">Upgrade Font Size</string>
    <string name="shop_font_big">A</string>
    <string name="shop_font_small">abc</string>
    <string name="shop_kill"><![CDATA[Copy & Paste]]></string>
    <string name="shop_speed">Upgrade Computer</string>
    <string name="stage_welcome">Back to school!</string>
    <string name="main_menu">Main Menu</string>
    <string name="stage_university">University life winner!</string>
    <string name="stage_dse">Get ready for DSE!\nBest-5 20 points (score 6000) for university offer.</string>
    <string name="stage_space">Do better in space and get back to University!!!</string>
    <string name="stage_primary">Your primary school life begins…</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tutorial_next"><![CDATA[Next >>]]></string>
    <string name="tutorial_prev"><![CDATA[<< Previous]]></string>
    <string name="tutuorial_ene">Nice!\nYou are good to go.</string>
</resources>
