<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".RegistrationActivity">

    <TextView android:text="@string/register_title" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textView4" android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:textSize="24sp" />
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:inputType="textPersonName" android:ems="10" android:id="@+id/editText"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.503"
        android:hint="@string/your_name" android:textAlignment="center" />
    <Button android:text="@string/add_photo" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/button4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/button5"
        android:onClick="dispatchTakePictureIntent" />
    <Button android:text="@string/start_game" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/button5" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:onClick="startGame" />
    <ImageView android:src="@drawable/placeholder" android:layout_width="wrap_content" android:layout_height="0dp"
        android:id="@+id/imageView" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:adjustViewBounds="true" />
</android.support.constraint.ConstraintLayout>