<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <TextView android:text="@string/tutorial_prev" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textView25" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" />
    <android.support.constraint.Guideline android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/guideline7" app:layout_constraintGuide_end="64dp" />
    <Button android:text="@string/start_game" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/button6" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView26" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="1dp" />
    <TextView android:text="@string/tutuorial_ene" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:textAppearance="@style/TextAppearance.AppCompat" android:textAlignment="center" android:textSize="30sp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button6" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        android:fontFamily="@font/crayon" />
</android.support.constraint.ConstraintLayout>
