<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout android:id="@+id/bottom_sheet" android:layout_width="match_parent"
        android:layout_height="300dp" android:background="@android:color/holo_blue_light" app:behavior_hideable="false"
        app:layout_behavior="@string/bottom_sheet_behavior">


        <TextView android:id="@+id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:gravity="center" android:text="Shop" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView" />


        <android.support.constraint.Guideline android:orientation="horizontal" android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="48dp" android:id="@+id/guideline3" />
        <HorizontalScrollView android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/horizontalScrollView">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content"
                android:layout_height="match_parent" android:background="@android:color/holo_blue_dark">
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                    <TextView android:text="@string/shop_tower" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        android:textSize="16sp" android:textAlignment="center" />
                    <ImageView android:layout_width="0dp" android:layout_height="0dp" app:srcCompat="@drawable/tower"
                        android:id="@+id/imageView9" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginBottom="16dp" />
                    <Button android:text="@string/shop_money" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button5"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp" android:layout_marginBottom="16dp" />
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">

                    <Button android:text="@string/shop_money" android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/button7" android:layout_weight="1" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" />
                    <TextView android:text="@string/shop_rate" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:textSize="16sp" android:textAlignment="center" />
                    <ImageView android:layout_width="0dp" android:layout_height="0dp"
                        app:srcCompat="@mipmap/ic_launcher_round" android:id="@+id/imageView10"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/button7"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" />
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">

                    <TextView android:text="@string/shop_size" android:layout_width="0dp" android:layout_height="wrap_content"
                        android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="16sp" android:textAlignment="center" />
                    <Button android:text="@string/shop_money" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button9"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" />
                    <TextView android:text="@string/shop_font_big" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/button9" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:textSize="40sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView11"
                        app:layout_constraintHorizontal_chainStyle="packed" />
                    <TextView android:text="@string/shop_font_small" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView11"
                        app:layout_constraintStart_toEndOf="@+id/textView10" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView10" />
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">

                    <Button android:id="@+id/option3" android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/shop_money" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.503" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" android:layout_weight="1" android:textSize="14sp"
                        android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp" />
                    <TextView android:text="@string/shop_speed" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView8" android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                        android:textAlignment="center" />
                    <ImageView android:layout_width="0dp" android:layout_height="0dp" app:srcCompat="@drawable/ship"
                        android:id="@+id/imageView12" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/option3"
                        android:layout_marginTop="16dp" />
                </android.support.constraint.ConstraintLayout>
                <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">

                    <TextView android:text="@string/shop_kill" android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp" android:textSize="16sp" android:textAlignment="center" />
                    <Button android:id="@+id/option4" android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="amet" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_weight="1"
                        android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp" />
                    <ImageView android:layout_width="0dp" android:layout_height="0dp"
                        app:srcCompat="@drawable/circle_vector_2" android:id="@+id/imageView13"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/option4"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" android:id="@+id/imageView14"
            app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintEnd_toStartOf="@+id/textView13" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView13" app:layout_constraintBottom_toBottomOf="@+id/textView13" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" android:id="@+id/imageView16"
            app:layout_constraintStart_toEndOf="@+id/textView13" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView13" app:layout_constraintTop_toTopOf="@+id/textView13" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>