<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.company.g1.a1g1_madp.MainActivity" android:id="@+id/l0">


    <android.support.constraint.ConstraintLayout android:layout_width="0dp" android:layout_height="0dp"
        android:id="@+id/topPanel" android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintDimensionRatio="">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_volume_up_black_24dp" android:id="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp" android:onClick="toggleMusic"
            android:background="@android:color/transparent" />
        <ImageView android:id="@+id/imageView3" android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" app:srcCompat="@drawable/logo_white"
            android:adjustViewBounds="true" />
        <Button android:id="@+id/button" android:layout_width="0dp" android:onClick="startGame" android:text="@string/new_game" android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintVertical_chainStyle="spread"
            android:background="@drawable/button" android:layout_height="0dp" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" android:padding="16dp"
            app:layout_constraintDimensionRatio="w,10:3" />
        <Button android:id="@+id/button2" android:layout_width="0dp" android:layout_height="0dp"
            android:text="@string/story_behind" android:layout_gravity="center" android:onClick="story"
            app:layout_constraintBottom_toTopOf="@+id/aboutUsButton"
            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/button"
            android:background="@drawable/button" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintDimensionRatio="w,10:3" />
        <Button android:id="@+id/aboutUsButton" android:layout_width="0dp" android:layout_height="0dp"
            android:onClick="startAboutUs" android:text="@string/about_us" android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:background="@drawable/button"
            android:layout_marginTop="8dp" android:layout_marginBottom="16dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintDimensionRatio="w,10:3" />
        <android.support.constraint.Guideline android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline" app:layout_constraintGuide_begin="72dp" />
        <android.support.constraint.Guideline android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2" app:layout_constraintGuide_end="72dp" />
    </android.support.constraint.ConstraintLayout>
    <ImageView android:layout_width="match_parent" android:layout_height="0dp" android:id="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/topPanel"
        app:srcCompat="@drawable/subbackground" android:scaleType="fitXY" app:layout_constraintDimensionRatio="w,9:20" />


</android.support.constraint.ConstraintLayout>


